--- a/templates/index.html
+++ b/templates/index.html
@@ -296,6 +296,22 @@
         Copyleft(c)2002 Team <b>Jr.Coriny</b> All rights reserved.
       </p>
     </footer>
+
+    <div class="won_container">
+      <img class="won_image"
+           src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/335620756_2092552704272958_9050847254524589794_n.jpg?stp=dst-jpg_p526x296&_nc_cat=104&ccb=1-7&_nc_sid=730e14&_nc_ohc=gD01gddwyBgAX_0kLos&_nc_ht=scontent-ssn1-1.xx&oh=00_AfD0Ju3coWQstRR-0Od1M8vyXl8HrRqvW-XdG3QqQCQL9g&oe=64145616" width='300'>
+      <div class="won_location">
+          <h2>내 정보</h2>
+          <h4>이름: 박재원 / 생년월일: 1999-11-05 / email: hajss225@gmail.com / MBTI: INFJ</h4>
+          <h3>※나의 대해※</h3>
+          <h4>👶코딩 두달차 코린이👶</h4>
+          <h4>🤪친해지면 이해불가🤪</h4>
+          <h4>🥴뇌정지 자주옴🥴</h4>
+          <h4>😭완전 기분파😭</h4>
+          <h4>🤮주량 소주3잔🤮</h4>
+      </div>
+  </div>
+  
 </body>
 
 </html>
